[tool.poetry]
name = "25_programing2"
version = "1.0.0"
description = "25_programing2"
authors = ["Yasuharu Suzuki"]
package-mode = false

[tool.poetry.dependencies]
python = "=3.11.*"
kaleido = "0.2.1"
pycaret = "^3.3.2"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
catboost = "^1.2.5"
xgboost = "^2.1.1"
selenium = "^4.23.1"
japanize-matplotlib = "^1.1.3"
neologdn = "^0.5.3"
imbalanced-learn = "^0.12.3"
openpyxl = "^3.1.5"
pulp = "^2.9.0"

